fix: gap between oragnizer & my feed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100vh;
   gap: 24px;
+  overflow-y: hidden;
   &__container{
     width: 100%;
     box-sizing: border-box;
