--- a/src/app/pages/feed/feed.component.scss
+++ b/src/app/pages/feed/feed.component.scss
@@ -2,29 +2,29 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  gap: 12px;
+  gap: 27px;
   min-width: 100%;
   height: 100%;
   &_content {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 40% 57%;
     row-gap: 0px;
-    column-gap: 16px;
+    column-gap: 56px;
     width: 100%;
-    height: 100%;
-    padding: 12px;
     &_left {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      background: white;
-      height: 100%;
+      max-height: 95%;
+      padding: 0;
       &-organizer {
         display: flex;
         flex-direction: column;
         height: 100%;
         gap: 12px;
         &-content {
+          background: white;
+          padding: 24px;
           display: flex;
           flex-direction: column;
           height: 100%;
@@ -194,9 +194,9 @@
 .feed-cards {
   display: flex;
   flex-direction: column;
-  max-height: 610px;
+  max-height: 540px;
   padding: 16px;
-  background: var(--xc-grey200);
+  background: var(--xc-grey100);
 }
 
 .objective-injector {
